fixtures/frontend/milestone-1/valid/pipes/pipe_algebra.aivi
type User = {
    active: Bool,
    age: Int,
    email: Text
}

type Shipping = { status: Text }
type Order = { shipping: Shipping }

type Status =
  | Paid
  | Pending
  | Failed Text

value maybeActiveUser:Option User user:User =>
    user
     ?|> (.active and .age > 18)

value statusLabel:Text status:Status =>
    status
     ||> Paid => "paid"
     ||> Pending => "pending"
     ||> Failed reason => "failed {reason}"

value startOrWait:Text ready:Bool =>
    ready
     T|> "start"
     F|> "wait"

value observeShipping:Text shipping:Shipping =>
    shipping
     |> .status

value shippingStatus:Text order:Order =>
    order
     |> .shipping
     | observeShipping
     |> .status
